<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp">


    <ImageView
        android:id="@+id/displayImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/avatar_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text=""
        android:textColor="#000000"
        android:textColorLink="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/displayImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/displayImage"
        app:layout_constraintTop_toTopOf="@+id/displayImage" />

    <TextView
        android:id="@+id/ratingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/rating"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayImage" />

    <RatingBar
        android:id="@+id/raiting"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:progressBackgroundTint="#000000"
        android:progressTint="#000000"
        android:secondaryProgressTint="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/ratingText"
        app:layout_constraintStart_toEndOf="@+id/ratingText"
        app:layout_constraintTop_toTopOf="@+id/ratingText" />

    <TextView
        android:id="@+id/definition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text=""
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingText" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/example"
        android:textColor="#000000"
        android:textColorLink="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/definition" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:padding="16dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#000000" />

            <TextView
                android:id="@+id/permalink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text=""
                android:textAlignment="textEnd"
                android:textColor="#33CCFF" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/thumbUpDisplay"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/thumb_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:srcCompat="@drawable/like" />

    <TextView
        android:id="@+id/thumbsUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text=""
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/thumbUpDisplay"
        app:layout_constraintStart_toEndOf="@+id/thumbUpDisplay"
        app:layout_constraintTop_toTopOf="@+id/thumbUpDisplay" />

    <ImageView
        android:id="@+id/thumbDownDisplay"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/thumb_down"
        app:layout_constraintBottom_toBottomOf="@+id/thumbUpDisplay"
        app:layout_constraintStart_toEndOf="@+id/thumbsUp"
        app:layout_constraintTop_toTopOf="@+id/thumbUpDisplay"
        app:srcCompat="@drawable/dislike_sort" />

    <TextView
        android:id="@+id/thumbsDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text=""
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/thumbDownDisplay"
        app:layout_constraintStart_toEndOf="@+id/thumbDownDisplay"
        app:layout_constraintTop_toTopOf="@+id/thumbDownDisplay" />

    <ImageView
        android:id="@+id/soundUrls"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/sound_icon"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/thumbDownDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/thumbDownDisplay"
        app:srcCompat="@drawable/speaker" />

    <TextView
        android:id="@+id/tracks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_1_3_tracks"
        android:textColor="#000000"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/soundUrls"
        app:layout_constraintEnd_toStartOf="@+id/soundUrls"
        app:layout_constraintTop_toTopOf="@+id/soundUrls" />

    <TextView
        android:id="@+id/writtenOn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="#4AB5D1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thumbDownDisplay" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="#4AB5D1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writtenOn" />


</androidx.constraintlayout.widget.ConstraintLayout>